--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,66 @@
+/* Base Styles */
+
 .App {
   text-align: center;
 }
 
-/* .App-header */
-
-img {
-  width: 20%;
+.wrapper {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
 }
 
+img {
+  width: 70%;
+}
+
+/* nav */
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0px;
+}
+
+nav ul {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 10px;
+
+}
+
+nav a:hover {
+background-color: aqua;
+}
+
+/* TV Results */
+
+.tvContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 30px auto;
+  background-color: palegoldenrod;
+  border: 1px solid black;
+  padding: 10px 0;
+
+}
+
+.tvContainer .flexContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flexContainer button {
+  width: 50%;
+  margin: 5px 0;
+}
+
+.flexContainer select {
+  margin: 5px 0;
+}
