--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 *, *:before, *:after {box-sizing: inherit}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;} /* end snippet */
+
+h1, h2, h3, h4, h5, h6, ul, ol, p {
+  padding: 0;
+  margin: 0;
+}
