--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,11 @@ background-color: aqua;
   display: flex;
   flex-direction: column-reverse;
 }
+
+.modal {
+  background: green;
+}
+
+.infoModal {
+  background: red;
+}
