--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,10 @@ nav ul {
 nav a {
   text-decoration: none;
   padding: 10px;
-
 }
 
 nav a:hover {
-background-color: aqua;
+  background-color: aqua;
 }
 
 /* TV Results */
@@ -47,7 +46,6 @@ background-color: aqua;
   background-color: palegoldenrod;
   border: 1px solid black;
   padding: 10px 0;
-
 }
 
 .tvContainer .flexContainer {
@@ -79,4 +77,17 @@ background-color: aqua;
 
 .infoModal {
   background: red;
+}
+
+.showContainer:last-child {
+  display: none;
+}
+
+.showContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 30px auto;
+  background-color: palegoldenrod;
+  border: 1px solid black;
+  padding: 10px 0;
 }
